freeze and down users overlap issue

--- a/src/components/stream/StreamComponent.css
+++ b/src/components/stream/StreamComponent.css
@@ -37,6 +37,7 @@
 
 .streamComponent {
     height: 100%;
+    border: 1px solid white;
 }
 
 video {
@@ -143,7 +144,7 @@ video {
     /* position: absolute; */
     overflow: hidden;
     object-fit: cover;
-    border: 1px solid white;
+    
     margin: auto;
     
 }
@@ -180,6 +181,12 @@ video {
         height: 70% !important;
     }
   }
+  @media only screen and (max-width: 550px) {
+    .OT_widget-containerDemo{
+        flex: 0 0 40%;
+    }
+  }
+
   @media only screen and (max-width: 420px) {
     .OT_widget-containerDemo{
         flex: 0 0 50%;
@@ -194,7 +201,8 @@ video {
 #streamSizeButton {
     background-color: #c9aa1fc4;
     bottom: 45px;
-    left: 10px;
+    /* left: 10px; */
+    right: 0;
     position: absolute;
     z-index: 1000;
     color: #ffffff;
